. [NEW] Action: Added new CallBlockO action
. [NEW] AtlasNode: added init method
. [NEW] ccConfig: removed CC_USES_VBO since VBO is always used
. [NEW] ccConfig: removed CC_OPTIMIZE_BLEND_FUNC_FOR_PREMULTIPLIED_ALPHA since the ccBlendFunctions keeps state
. [NEW] ccConfig: removed CC_SPRITEBATCHNODE_DEBUG_DRAW. CC_SPRITE_DEBUG_DRAW can be used both for batches and non batches.
. [NEW] ccGLState: added helper functions that keeps the GL state
. [NEW] CProgressTimer: 
            - Convenience class constructor now passes in CCSprite (this gives developers easier access to timer with CCSpriteFrames, CCSprites, etc)
            - Reduced the progress timer types to just radial and bar - added in reverse, midpoint, barChangeRate to be have more flexible options to modify the progress.
			- Supports Tint + Color
. [NEW] Director: Removed Fast, FastThreaded and NSTimer director. The only one available is DisplayLink.
. [NEW] Director: Orientations are no longer supported. Only Portrait mode is supported. Use a ViewController to rotate the EAGL view.
. [NEW] Director: The FPS position can be configured via ccConfig.h file
. [NEW] Director: Fast FPS is the only supported way to display FPS. Removed the CCLabelTTF way of doing it
. [NEW] Macros: ccgl* replaced with ccGL*
. [NEW] Macros: CC_ENABLE/DISABLE_DEFAULT_STATE: Removed. No longer needed.
. [NEW] MotionStreak: Using new motion streak code. 10x faster than the old one.
. [NEW] OpenGL ES: Added support for OpenGL ES 2.0. OpenGL ES 1.1 is no longer supported
. [NEW] Profiler: API heavily updated to make it easier to integrate into any kind of component
. [NEW] Sprite: initWithTexture:rect is the designated initializer
. [NEW] SpriteBatchNode / Sprite / Node: Simplied rendering. Easiert to integrate with physics engines. Just subclass nodeToParentTransform().
. [NEW] SpriteFrameCache: addSpriteFramesWithFile:textureFile renamed to addSpriteFramesWithFile:textureFilename to be consistent with the new API